config/samples/poc/rwo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: longhorn-nfs-gateway
  labels:
    storage.k8s-darwin.dev/poc: longhorn-nfs-gateway
    storage.k8s-darwin.dev/mode: rwo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: longhorn-nfs-gateway
    storage.k8s-darwin.dev/mode: rwo
  ports:
    - name: nfs
      protocol: TCP
      port: 2049
      targetPort: nfs
    - name: mountd
      protocol: TCP
      port: 20048
      targetPort: mountd
